--- a/index.css
+++ b/index.css
@@ -107,9 +107,10 @@ header img {
   background-size: cover;
 }
 .minus {
-  padding: 120px 0 100px 0;
+  /* padding: 0px 0 100px 0; */
   position: relative;
-  /* height: 900px; */
+  align-content: center;
+  height: 100vh;
   z-index: 1;
 }
 .zero h2 {
